@@ -23,7 +23,7 @@
 #ifndef NM_PPTP_PLUGIN_H
 #define NM_PPTP_PLUGIN_H
 
-#include <glib/gtypes.h>
+#include <glib.h>
 #include <glib-object.h>
 #include <nm-vpn-plugin.h>
 
